
Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-Jul-2009 Gergo Erdosi
 + Added Geshi plugin back to content plugins.
 ^ Updated Geshi library to version 1.0.8.4.
 - Removed language/pdf_fonts directory.
 - Removed Khepri template.
 - Removed unnecessary Food icons.
 - Removed images/smilies and images/stories directories.
 ^ Renamed images/M_images to images/joomla. 

08-Jul-2009 Gergo Erdosi
 # Fixed bug in JForm::loadFileType() path building.
 ^ Changed header icons in com_users.

07-Jul-2009 Gergo Erdosi
 + Added MySQL version check to installation.
 # [#17119] [patch] Add keyboard access to admin com_admin
 # [#17131] [patch] Add keyboard access to admin mod_login

07-Jul-2009 Andrew Eddie
 # Fixed modal article selector.

06-Jul-2009 Andrew Eddie
 # [#17103] Missing JText::_ in administrator/components/com_admin/helpers/html/directory.php
 ^ Change component configuration files from params to fields.
 ^ Make view/layout labels consistent and convert XML from params to fields.
 ^ Refactored instances of global $mainframe.
 ^ Moved the milkyway overrides out of the way for the time being (too many errors to fix).
 + Added JApplicationHelper::getComponentName from experimental branch.

05-Jul-2009 Gergo Erdosi
 ^ Replaced mod_status with its refactored version.
 ! Thanks to Andrea Tarr for helping refactor the mod_status module.
 # Fixed bug in installation.

05-Jul-2009 Andrew Eddie
 + Add accessability tweaks to admin mod_menu.
 + [#16547] Cancel button on Article Manager parameters does not work
 ^ All arguments are now optional in JParameter::__construct.
 ^ Refactored com_config.
 + Added support for tabbed configuration files in com_config component support.
 ^ Configured com_content component parameters to use tabs.

04-Jul-2009 Gergo Erdosi
 - Removed closing tag in configuration.php file.
 + Added new parameter option 'closingtag' to JRegistryFormatPHP::objectToString().