@@ -77,12 +77,12 @@
 			<option value="1">Text</option>
 			<option value="2">None</option>
 		</param>
-		<param name="icon_address" type="imagelist" directory="/images/M_images" hide_none="1" default="" label="Address Icon" description="Icon for the Address info" />
-		<param name="icon_email" type="imagelist" directory="/images/M_images" hide_none="1" default="" label="Email Icon" description="Icon for the Email info" />
-		<param name="icon_telephone" type="imagelist" directory="/images/M_images" hide_none="1" default="" label="Telephone Icon" description="Icon for the Telephone info" />
-		<param name="icon_mobile" type="imagelist" directory="/images/M_images" hide_none="1" default="" label="Mobile Icon" description="Icon for the Mobile info" />
-		<param name="icon_fax" type="imagelist" directory="/images/M_images" hide_none="1" default="" label="Fax Icon" description="Icon for the Fax info" />
-		<param name="icon_misc" type="imagelist" directory="/images/M_images" hide_none="1" default="" label="Misc Icon" description="Icon for the Misc info" />
+		<param name="icon_address" type="imagelist" directory="/images/joomla" hide_none="1" default="" label="Address Icon" description="Icon for the Address info" />
+		<param name="icon_email" type="imagelist" directory="/images/joomla" hide_none="1" default="" label="Email Icon" description="Icon for the Email info" />
+		<param name="icon_telephone" type="imagelist" directory="/images/joomla" hide_none="1" default="" label="Telephone Icon" description="Icon for the Telephone info" />
+		<param name="icon_mobile" type="imagelist" directory="/images/joomla" hide_none="1" default="" label="Mobile Icon" description="Icon for the Mobile info" />
+		<param name="icon_fax" type="imagelist" directory="/images/joomla" hide_none="1" default="" label="Fax Icon" description="Icon for the Fax info" />
+		<param name="icon_misc" type="imagelist" directory="/images/joomla" hide_none="1" default="" label="Misc Icon" description="Icon for the Misc info" />
 	</params>
 	<params group="email">
 		<param name="show_email_form" type="radio" default="1" label="Email Form" description="Show/Hide the email to form">
