@@ -304,7 +304,7 @@ TIPIFYESTITLECONTENTITEMS=If set to Yes, the Title of Articles will be hyperlink
 TIPIFYESUSERMAILEDLINK=If set to Yes, the User will be e-mailed a link to activate their account before they can log in.
 TIPIFYOURSITEISOFFLINE=A message that displays in the Front-end if your site is offline.
 TIPIMAGEFOLDERWARN=You can create a new folder to use with the Image Manager and enter the path to that folder here. If you want to access this folder from the Media Manager, use the same folder name or make this a sub folder of the Media Manager folder. Warning: Do not delete or change the existing images/stories folder since it is used by the application.
-TIPFILEFOLDERWARN=You can create a new folder to use with the Media Manager and enter the path to that folder here. Warning: Do not delete or change the existing images folder. The images/banners, images/M_images, images/smilies, and images/stories folders are used by the application.
+TIPFILEFOLDERWARN=You can create a new folder to use with the Media Manager and enter the path to that folder here. Warning: Do not delete or change the existing images folder. The images/banners, images/joomla, images/smilies, and images/stories folders are used by the application.
 TIPLOGFOLDER=For logging of Joomla!. Please specify a folder.
 TIPMAILER=Select which mailer you wish to use for the delivery of site e-mails.
 TIPMAILFROM=The e-mail address that will be used to send site e-mails from.
@@ -330,7 +330,7 @@ USE MOD_REWRITE=Use Apache <em>mod_rewrite</em>
 USER SETTINGS=User Settings
 USERS=Users
 WARNAPACHEONLY=Apache users only! Rename htaccess.txt to .htaccess before activating.
-WARNPATHCHANGES=You can set new locations for the 'Path to Media Folder' and 'Path to Image Folder' folders. However, do not delete or change the existing images folder. The images/banners, images/M_images, images/smilies, and images/stories folders are used by the application. See the Help Topic for this page if you need assistance returning to the original directory structure.
+WARNPATHCHANGES=You can set new locations for the 'Path to Media Folder' and 'Path to Image Folder' folders. However, do not delete or change the existing images folder. The images/banners, images/joomla, images/smilies, and images/stories folders are used by the application. See the Help Topic for this page if you need assistance returning to the original directory structure.
 WARNDONOTCHANGEDATABASETABLESPREFIX=Do not change unless you have a database built using tables with the prefix you are setting.
 WARNING=WARNING!
 WYSIWYG EDITOR=WYSIWYG Editor
