@@ -151,12 +151,12 @@ class ContactViewContact extends JView
 
 			default :
 				// icons
-				$image1 = JHtml::_('image.site', 'con_address.png', 	'/images/M_images/', $contact->params->get('icon_address'), 	'/images/M_images/', JText::_('Address').": ");
-				$image2 = JHtml::_('image.site', 'emailButton.png', 	'/images/M_images/', $contact->params->get('icon_email'), 		'/images/M_images/', JText::_('Email').": ");
-				$image3 = JHtml::_('image.site', 'con_tel.png', 		'/images/M_images/', $contact->params->get('icon_telephone'), 	'/images/M_images/', JText::_('Telephone').": ");
-				$image4 = JHtml::_('image.site', 'con_fax.png', 		'/images/M_images/', $contact->params->get('icon_fax'), 		'/images/M_images/', JText::_('Fax').": ");
-				$image5 = JHtml::_('image.site', 'con_info.png', 		'/images/M_images/', $contact->params->get('icon_misc'), 		'/images/M_images/', JText::_('Information').": ");
-				$image6 = JHtml::_('image.site', 'con_mobile.png', 		'/images/M_images/', $contact->params->get('icon_mobile'), 	'/images/M_images/', JText::_('Mobile').": ");
+				$image1 = JHtml::_('image.site', 'con_address.png', 	'/images/joomla/', $contact->params->get('icon_address'), 	'/images/joomla/', JText::_('Address').": ");
+				$image2 = JHtml::_('image.site', 'emailButton.png', 	'/images/joomla/', $contact->params->get('icon_email'), 		'/images/joomla/', JText::_('Email').": ");
+				$image3 = JHtml::_('image.site', 'con_tel.png', 		'/images/joomla/', $contact->params->get('icon_telephone'), 	'/images/joomla/', JText::_('Telephone').": ");
+				$image4 = JHtml::_('image.site', 'con_fax.png', 		'/images/joomla/', $contact->params->get('icon_fax'), 		'/images/joomla/', JText::_('Fax').": ");
+				$image5 = JHtml::_('image.site', 'con_info.png', 		'/images/joomla/', $contact->params->get('icon_misc'), 		'/images/joomla/', JText::_('Information').": ");
+				$image6 = JHtml::_('image.site', 'con_mobile.png', 		'/images/joomla/', $contact->params->get('icon_mobile'), 	'/images/joomla/', JText::_('Mobile').": ");
 
 				$contact->params->set('marker_address', 	$image1);
 				$contact->params->set('marker_email', 		$image2);
