@@ -21,5 +21,5 @@ SET ITEMID=Set ItemID
 SIZE OF THE SEARCH TEXT BOX IN CHARACTERS=Size of the search text box in characters
 TEXT=Text
 THIS MODULE WILL DISPLAY A SEARCH BOX=This module will display a search box.
-USE AN IMAGE AS BUTTON=Use an image as button. This image has to be named searchButton.gif and must be located in /images/M_images/
+USE AN IMAGE AS BUTTON=Use an image as button. This image has to be named searchButton.gif and must be located in /images/joomla/
 
