@@ -13,7 +13,7 @@ defined('_JEXEC') or die;
 class modSearchHelper
 {
     function getSearchImage($button_text) {
-	    $img = JHtml::_('image.site', 'searchButton.gif', '/images/M_images/', NULL, NULL, $button_text, null, 0);
+	    $img = JHtml::_('image.site', 'searchButton.gif', '/images/joomla/', NULL, NULL, $button_text, null, 0);
 		return $img;
 	}
 }
