@@ -36,8 +36,8 @@ class plgContentVote extends JPlugin
 			$img = '';
 
 			// Look for images in template if available.
-			$starImageOn = JHtml::_('image.site', 'rating_star.png', '/images/M_images/');
-			$starImageOff = JHtml::_('image.site', 'rating_star_blank.png', '/images/M_images/');
+			$starImageOn = JHtml::_('image.site', 'rating_star.png', '/images/joomla/');
+			$starImageOff = JHtml::_('image.site', 'rating_star_blank.png', '/images/joomla/');
 			for ($i=0; $i < $row->rating; $i++) {
 				$img .= $starImageOn;
 			}
